allow-27017.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-27107
spec:
 podSelector:
   matchLabels:
     app: mongodb
 ingress:
 - from: 
   - podSelector:
       matchLabels:
         app: userregsvc      
   ports:
   - protocol: TCP
     port: 27017
