allow-3306.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-3306
spec:
 podSelector:
   matchLabels:
     app: mysql
 ingress:
 - from: 
   - podSelector:
       matchLabels:
         app: emailsvc        
   ports:
   - protocol: TCP
     port: 3306
