allow-8080-twitter.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-8080-twitter  
spec:
  podSelector:
    matchLabels:
      app: twitter-api 
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
