allow-8080-userregsvc.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-8080-userregsvc
spec:
  podSelector:
    matchLabels:
      app: userregsvc
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
